--- a/04_collect new.ipynb
+++ b/04_collect new.ipynb
@@ -29,18 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "자이언트캣이 눈앞에 ‘척’…AR성지로 떠오른 올림픽공원 IT조선 1시간 전 보내기\n",
-      "16일 AR성지로 떠오른 올림픽공원 한얼광장에 가서 고양이와 용과 함께한 시간을 가졌다. SK텔레콤은 최근 ‘AR 동물원’ 서비스 런칭과 함께 13일부터 25일까지 올림픽공원에 ‘5GX 쿨파크’를 운영 중이다. 고객은...\n",
-      "서울 한복판에 마법진 그려지면, 자이언트 고양이가… 비즈니스워치 1시간 전\n",
-      "'몰입경험' 시대…올림픽공원 속 '초실감' 동물원 연합인포맥스 1시간 전\n",
-      "관련뉴스 전체보기\n"
+      "자이언트캣이 눈앞에 ‘척’…AR성지로 떠오른 올림픽공원\n",
+      "올림픽공원 '대왕고양이' 앞에서 자기가 더 귀엽다며 카메라 막아서는 레서판...\n",
+      "[TF포토] ‘올림픽공원에 나타난 초대형 고양이’\n",
+      "'올림픽공원 점령한 거대 고양이'\n"
      ]
     }
    ],
@@ -53,9 +52,11 @@
     "    div = driver.find_element_by_class_name('_prs_nws_all')\n",
     "    elem = div.find_element_by_tag_name('ul')\n",
     "    news = div.find_elements_by_xpath('./ul/li')\n",
-    "    print(news[0].text)\n",
+    "#     print(news[0].text)\n",
     "#     elem = driver.find_element_by_id(\"search_btn\")\n",
-    "   \n",
+    "    for i in news:\n",
+    "        title_tag = i.find_element_by_class_name('_sp_each_title')\n",
+    "        print(title_tag.text)\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "finally:\n",
