--- a/04_collect new.ipynb
+++ b/04_collect new.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -37,9 +37,17 @@
      "output_type": "stream",
      "text": [
       "자이언트캣이 눈앞에 ‘척’…AR성지로 떠오른 올림픽공원\n",
+      "http://it.chosun.com/site/data/html_dir/2019/08/18/2019081800177.html\n",
+      "IT조선 2시간 전 보내기\n",
+      "올림픽공원 하늘에 떠오른 자이언트 비룡···SK텔레콤 점프AR 체험해보니\n",
+      "http://www.etnews.com/20190818000064\n",
+      "전자신문 8분 전 네이버뉴스 보내기\n",
       "올림픽공원 '대왕고양이' 앞에서 자기가 더 귀엽다며 카메라 막아서는 레서판...\n",
+      "https://www.insight.co.kr/news/241964\n",
+      "인사이트 13시간 전 보내기\n",
       "[TF포토] ‘올림픽공원에 나타난 초대형 고양이’\n",
-      "'올림픽공원 점령한 거대 고양이'\n"
+      "http://news.tf.co.kr/read/photomovie/1760774.htm\n",
+      "더팩트 19시간 전 보내기\n"
      ]
     }
    ],
@@ -57,18 +65,15 @@
     "    for i in news:\n",
     "        title_tag = i.find_element_by_class_name('_sp_each_title')\n",
     "        print(title_tag.text)\n",
+    "        link = title_tag.get_attribute('href')\n",
+    "        print(link)\n",
+    "        pub_date_tag = i.find_element_by_class_name('txt_inline')\n",
+    "        print(pub_date_tag.text)\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "finally:\n",
-    "    pass"
+    "    driver.quit()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
